testing/tests/ui/no-such-escaper.stderr
error: the previous template error derives from
 --> tests/ui/no-such-escaper.rs:6:5
  |
6 |     source = r#"In LaTeX you write `{{text}}` like `{{text|escape("latex")}}`."#,
  |     ^^^^^^

error: no escaper defined for extension 'tex'. The available extensions are: "", "htm", "html", "j2", "jinja", "jinja2", "md", "none", "svg", "txt", "xml", "yml"
  --> tests/ui/no-such-escaper.rs:14:5
   |
14 |     ext = "tex",
   |     ^^^

error: no escaper defined for extension 'tex'. The available extensions are: "", "htm", "html", "j2", "jinja", "jinja2", "md", "none", "svg", "txt", "xml", "yml"
  --> tests/ui/no-such-escaper.rs:22:12
   |
22 | #[template(path = "latex-file.tex")]
   |            ^^^^
